--- a/preamble.tex
+++ b/preamble.tex
@@ -76,12 +76,16 @@
         \end{tabular}
     }
     #3
-    \vspace{-5mm}
+    %\vspace{-2mm}
     \end{figure}
 }
 
 \newcommand{\skat}[1]{\ensuremath{\textbf{#1}}}
 \newcommand{\Edt}{\skat{Edt}}
+\newcommand{\Var}{\skat{Var}}
+\newcommand{\Types}{\skat{Types}}
+
+\newcommand{\pra}{\hookrightarrow}
 
 %%% Local Variables:
 %%% mode: latex
